--- a/index.html
+++ b/index.html
@@ -9,32 +9,36 @@
 	</head>
 	<body>
 		<div class="container">
-			<div class="display"></div>
+			<div class="display-wrap">
+				<div class="display-prev">
+					27 + 60 =
+				</div>
+				<div class="display-num">87</div>
+			</div>
 			<div class="btns">
 				<div class="clear">
-					<button>C</button>
+					<button>AC</button>
 					<button>Clear</button>
 				</div>
 				<div class="wrap">
 					<div class="numbers">
-						<button>7</button>
-						<button>8</button>
-						<button>9</button>
-                        <button>&div;</button>
-						<button>4</button>
-						<button>5</button>
-                        <button>6</button>
-                        <button>&times;</button>
-						<button>1</button>
-						<button>2</button>
-                        <button>3</button>
-                        <button>-</button>
-                        <button>0</button>
-                        <button>.</button>
-                        <button>=</button>
-                        <button>+</button>
+						<button value="7" class="num">7</button>
+						<button value="8" class="num">8</button>
+						<button value="9" class="num">9</button>
+						<button value="&div;" class="operator">&div;</button>
+						<button value="4" class="num">4</button>
+						<button value="5" class="num">5</button>
+						<button value="6" class="num">6</button>
+						<button value="&times;" class="operator">&times;</button>
+						<button value="1" class="num">1</button>
+						<button value="2" class="num">2</button>
+						<button value="3" class="num">3</button>
+						<button value="-" class="operator">-</button>
+						<button value="0" class="num">0</button>
+						<button>.</button>
+						<button value="=" class="operator">=</button>
+						<button value="+" class="operator">+</button>
 					</div>
-
 				</div>
 			</div>
 		</div>
