Added id to = for use in JavaScript

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 		<div class="container">
 			<div class="display-wrap">
 				<div class="display-prev">
-					27 + 60 =
 				</div>
-				<div class="display-num">87</div>
+				<div class="display-num">0</div>
 			</div>
 			<div class="btns">
 				<div class="clear">
@@ -36,7 +35,7 @@
 						<button value="-" class="operator">-</button>
 						<button value="0" class="num">0</button>
 						<button>.</button>
-						<button value="=" class="operator">=</button>
+						<button value="=" id="operate">=</button>
 						<button value="+" class="operator">+</button>
 					</div>
 				</div>
