--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 	<body>
 		<div class="container">
 			<div class="display-wrap">
-				<div class="display-prev">
-				</div>
+				<div class="display-prev"></div>
 				<div class="display-num">0</div>
 			</div>
 			<div class="btns">
 				<div class="clear">
-					<button>AC</button>
-					<button>Clear</button>
+					<button id="clear-btn">AC</button>
+					<button id="delete-btn">Delete</button>
 				</div>
 				<div class="wrap">
 					<div class="numbers">
