Added decimal point functionality and also numbers with starting decimal point go from .25 => 0.25, and also with ending decimal points 22. => 22

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<button value="3" class="num">3</button>
 						<button value="-" class="operator">-</button>
 						<button value="0" class="num">0</button>
-						<button>.</button>
+						<button value="." id="decimal">.</button>
 						<button value="=" id="operate">=</button>
 						<button value="+" class="operator">+</button>
 					</div>
