Added the number sign button, positioning and style improvements

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 				<div class="clear">
 					<button id="clear-btn">AC</button>
 					<button id="delete-btn">Delete</button>
+					<button id="negative-num">+/-</button>
 				</div>
 				<div class="wrap">
 					<div class="numbers">
