Added the function for changing the number sign, also now you can't enter an operator if you didn't enter a number

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<div class="clear">
 					<button id="clear-btn">AC</button>
 					<button id="delete-btn">Delete</button>
-					<button id="negative-num">+/-</button>
+					<button id="number-sign">+/-</button>
 				</div>
 				<div class="wrap">
 					<div class="numbers">
